修正调查问卷javascript

--- a/app/views/csi/survey_subjects/_new_form.html.erb
+++ b/app/views/csi/survey_subjects/_new_form.html.erb
@@ -1,3 +1,4 @@
+<% require_javascript(:survey) %>
 <%= common_title%>
 <div id="new_form">
 <%= form_for(@survey_subject,:url=>{:controller=>"csi/survey_subjects",:action=>"create",:survey_id=>@survey_id},
