--- a/app/views/csi/surveys/index.html.erb
+++ b/app/views/csi/surveys/index.html.erb
@@ -22,9 +22,9 @@
         <div id="survey" class="datatable" style="width:100%;">
           <div id="id" style="display:none">
             <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>&nbsp;
-            <div class="display-<%= "{allow_author_only}"%>">
+            <span class="display-<%= "{allow_author_only}"%>">
                 <%= link_to(t(:result),{:action=>"show_result",:id=>"{id}"}) %>&nbsp;
-            </div>
+            </span>
           </div>
           <div id="joined_count" style="display:none">
             <div style="text-align:center;"><%= "{joined_count}"%></div>
@@ -36,8 +36,8 @@
         <%= datatable("survey",{:action=>"get_data"},
                   [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"80px"},
                    {:key=>"title",:label=>t(:label_csi_survey_title),:searchable=>true},
-                   {:key=>"joined_count",:label=>t(:label_csi_survey_joined_count),:formatter=>"Y.irm.template", :width=>"35px"},
-                   {:key=>"person_count",:label=>t(:label_csi_survey_person_count),:formatter=>"Y.irm.template", :width=>"35px"},
+                   {:key=>"joined_count",:label=>t(:label_csi_survey_joined_count),:formatter=>"Y.irm.template", :width=>"80px"},
+                   {:key=>"person_count",:label=>t(:label_csi_survey_person_count),:formatter=>"Y.irm.template", :width=>"80px"},
                    {:key=>"published_at",:label=>t(:label_csi_survey_created_at), :width=>"80px"},
                    {:key=>"allow_author_only", :hidden => true}],
                    {:paginator_box=>"surveryPaginator",:search_box=>"permissionsSearchBox"})%>
