--- a/public/themes/default/stylesheets/container.css
+++ b/public/themes/default/stylesheets/container.css
@@ -158,7 +158,7 @@ body .sub-block .lbBody {
     padding:5px 12px;
 }
 
-.page-block .pbTitle {
+.page-block .pbTitle, .sub-block .pbTitle {
     color:#222222;
     font-size:91%;
     margin:0;
