--- a/app/views/icm/mail_requests/new.html.erb
+++ b/app/views/icm/mail_requests/new.html.erb
@@ -35,22 +35,34 @@
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_common_username)%></label></td>
               <td class="dataCol"><%=f.text_field :username, :required => true%></td>
-              <td class="labelCol"><label><%=(t :label_icm_incident_request_support_group)%></label></td>
-              <td class="dataCol"><%=f.select :support_group_id,nullable_options_for_select(available_support_group,@mail_request.support_group_id),
-                                                    {},{:id=>"mail_request_support_group_id"}%></td>
+              <td class="labelCol">&nbsp;</td>
+              <td class="dataCol">&nbsp;</td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_common_password)%></label></td>
               <td class="dataCol"><%=f.text_field :password, :type => "password", :required => true%></td>
-              <td class="labelCol"><label><%=t(:label_icm_incident_request_support_person)%></label></td>
-              <td class="dataCol"><%= f.select(:support_person_id,nullable_options_for_select([],nil),{},
-                                  {
-                                   :id=>"mail_request_support_person_id",
-                                   :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${mail_request_support_group_id}"),
-                                   :depend=>"mail_request_support_group_id",
-                                   :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
-                                   }) %></td>
+              <td class="labelCol">&nbsp;</td>
+              <td class="dataCol">&nbsp;</td>
             </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="pbSubheader first tertiaryPalette">
+      <span class="pbSubExtra">
+          <span class="requiredLegend">
+            <span class="requiredExampleOuter">
+            <span class="requiredExample">&nbsp;</span>
+            </span>
+          <span class="requiredMark">*</span>
+          <span class="requiredText"> = <%=t(:label_is_required)%></span>
+          </span>
+      </span>
+      <h3><%=t(:label_icm_mail_request_default_info)%></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_external_system)%></label></td>
               <td class="dataCol"><%=f.select :external_system_id, ava_external_systems, {:value=>@mail_request.external_system_id},
@@ -75,6 +87,23 @@
               <td class="labelCol"><label><%=(t :label_icm_incident_request_impact_range_code)%></label></td>
               <td class="dataCol"><%=f.select :impact_range_id,options_for_select(available_impact_range,@mail_request.impact_range_id||Icm::ImpactRange.default_id),
                                                     {},{:id=>"incident_request_impact_range_code"}%></td>
+            </tr>
+            <tr>
+
+              <td class="labelCol"><label><%=(t :label_icm_incident_request_support_group)%></label></td>
+              <td class="dataCol"><%=f.select :support_group_id,nullable_options_for_select(available_support_group,@mail_request.support_group_id),
+                                                    {},{:id=>"mail_request_support_group_id"}%></td>
+            </tr>
+            <tr>
+
+              <td class="labelCol"><label><%=t(:label_icm_incident_request_support_person)%></label></td>
+              <td class="dataCol"><%= f.select(:support_person_id,nullable_options_for_select([],nil),{},
+                                  {
+                                   :id=>"mail_request_support_person_id",
+                                   :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${mail_request_support_group_id}"),
+                                   :depend=>"mail_request_support_group_id",
+                                   :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
+                                   }) %></td>
             </tr>
         </tbody>
       </table>
