fixed: 修正边栏在添加watcher和relation request后，LOV样式发生变更的问题

--- a/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
+++ b/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
@@ -1,3 +1,5 @@
+<% require_javascript(:extjs) %>
+<% require_css(:extjs) %>
 <%= form_tag({:controller => "icm/incident_requests", :action => "add_relation", :source_id => incident_request.id}, :remote => true) do %>
 <div class="sidebarModule">
     <div class="sidebarModuleHeader"><h2>
