--- a/public/themes/default/stylesheets/header.css
+++ b/public/themes/default/stylesheets/header.css
@@ -269,6 +269,41 @@ body#body {
     font-weight: bold;
 	line-height: 20px;
 }
+
+.pbHeader .pbButton .menuButton div.menuLabel a {
+    background: url("../images/btn_mutton_sprite.png") repeat-x scroll right top #E8E8E9;
+    border-color: #B5B5B5 #B5B5B5 #7F7F7F;
+	border-width: 1px;
+    border-style: solid;
+    border-radius: 3px 3px 3px 3px;
+	text-decoration: none;
+	color:#333333;
+	display: inline-block;
+	padding: 0 25px 0 8px;
+	height: 26px;
+    font-size: 11px;
+    font-weight: bold;
+	line-height: 23px;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0){
+.pbHeader .pbButton .menuButton div.menuLabel a {
+    background: url("../images/btn_mutton_sprite.png") repeat-x scroll right top #E8E8E9;
+    border-color: #B5B5B5 #B5B5B5 #7F7F7F;
+	border-width: 1px;
+    border-style: solid;
+    border-radius: 3px 3px 3px 3px;
+	text-decoration: none;
+	color:#333333;
+	display: inline-block;
+	padding: 0 25px 0 8px;
+	height: 22px;
+    font-size: 11px;
+    font-weight: bold;
+	line-height: 23px;
+}
+}
+
 .menuButton div.menuLabel a:hover{background-position: right -30px;}
 .menuButton div.menuLabel a[class="disabled"] {
     color: #a9a9a9;
