--- a/app/views/csi/surveys/show_result.html.erb
+++ b/app/views/csi/surveys/show_result.html.erb
@@ -16,7 +16,7 @@
         <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_csi_survey_result) %></h2></td>
         <td id="topButtonRow" class="pbButton">
           <div class="button"><%= link_to t(:return), {:action=>"index"}%></div>
-          <% if @batch_results.present? %>
+          <% if false %>
              <div class="button"><%= link_to t(:export), {:action=>"export_result",:format => "xls"}%></div>
              <div class="button"><%= link_to t(:report), {:action=>"survey_report",:id=>@survey_id}%></div>
           <% end %>
