--- a/app/views/irm/wf_rules/_rule_filter.html.erb
+++ b/app/views/irm/wf_rules/_rule_filter.html.erb
@@ -23,7 +23,7 @@
               <%=sub_f.hidden_field(:bo_code,:value=>@rule_filter.bo_code)%>
               <%=sub_f.blank_select(:attribute_name,available_view_column(@rule_filter.bo_code),{:required=>true,:size=>10},{:class=>"filterColumnSelect",:ref=>sub_f.object.seq_num})%>
             </td>
-            <td class="dataCol" id="filter<%=sub_f.object.seq_num%>">
+            <td class="dataCol filterOperationValue" id="filter<%=sub_f.object.seq_num%>">
               <%= render_exists_operator_and_value(@rule_filter.bo_code,sub_f.object.attribute_name,sub_f)  %>
             </td>
           </tr>
