feature: 增加知识库频道管理相关页面

--- a/app/views/skm/columns/index.html.erb
+++ b/app/views/skm/columns/index.html.erb
@@ -1,6 +1,6 @@
 <%= setting_title %>
-<script type="text/javascript" src="/javascripts/ext4-all.js"></script>
-<link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/ext4-all.css"></link>
+<% require_javascript(:extjs)  %>
+<% require_css(:extjs)  %>
 
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
