--- a/app/views/skm/entry_headers/_data_grid.html.erb
+++ b/app/views/skm/entry_headers/_data_grid.html.erb
@@ -18,8 +18,8 @@
       <div class="pbBody">
         <div id="entry_headers_list" class="datatable" style="width:100%">
           <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:controller => "skm/entry_headers", :action=>"edit",:id=>"{id}"}) %>&nbsp;
-            <%= link_to(t(:show),{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>&nbsp;
+            <%= link_to(t(:edit),{:controller => "skm/entry_headers", :action=>"edit",:id=>"{id}"}) %>&nbsp;|
+            <%= link_to(t(:show),{:controller => "skm/entry_headers", :action=>"show",:id=>"{id}"}) %>&nbsp;|
             <span class="display-<%= "{is_favorite}"%>">
                 <%= link_to(t(:save_page), {:controller => "skm/entry_headers", :action => "add_favorites", :id => "{id}", :person_id => Irm::Person.current.id}) %>
             </span>
@@ -37,7 +37,7 @@
                    {:key=>"entry_title",:label=>t(:label_skm_entry_header_title), :searchable => true,:formatter=>"Y.irm.template"},
                    {:key=>"published_date_f",:label=>t(:label_skm_entry_header_published_date), :width => "180px"},
                    {:key=>"is_favorite", :hidden => true}],
-                   {:search_box => "entryHeadersSearchBox", :view_filter => true,:html=>true})%>
+                   {:search_box => "entryHeadersSearchBox",:html=>true})%>
         <div id="entry_headers_list_paginator_box"></div>
       </div>
     </div>
