--- a/app/views/irm/reports/_show_program.html.erb
+++ b/app/views/irm/reports/_show_program.html.erb
@@ -32,7 +32,7 @@
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= @report[:name] %></h2></td>
+          <td class="pbTitle"><h2 class="mainTitle" title="<%= @report[:description] %>"><%= @report[:name] %></h2></td>
           <td></td>
         </tr>
         <tr>
