feature: 在 icm_incident_requests 加入kb_flag，代表事故单是否被生成过知识库文章。 同时在事故单首页列表中，如果有生成过知识库文章的事故单，标题前会显示一个书签图标

--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -129,7 +129,7 @@
                 <div class="gray-button"><%= link_to t(:edit), {:controller=>"icm/incident_requests",:action => "edit", :id => @incident_request.id}%></div>
               <%end%>
               </div>
-              <% if @incident_request[:skm_flag]==0 %>
+              <% if @incident_request.kb_flag==Irm::Constant::SYS_NO %>
                 <div class="button-group">
                     <div class="gray-button"><%= link_to t(:label_icm_save_as_skm), {:controller=>"skm/entry_headers",:action => "new_from_icm_request", :request_id => @incident_request.id}%></div>
                 </div>
