feature: 更改知识库首页 栏目选择栏样式

--- a/public/themes/default/stylesheets/container.css
+++ b/public/themes/default/stylesheets/container.css
@@ -496,3 +496,7 @@ body .wizard-block .pbBody .pbSubheader h3, body .wizard-block .bPageBlock .pbBo
     font-weight:bold;
     text-align:center;
 }
+
+/****************************************************/
+table.split-table{width:100%}
+table.split-table tr td:first-child {width: 250px;}
