--- a/public/themes/default/stylesheets/button.css
+++ b/public/themes/default/stylesheets/button.css
@@ -237,3 +237,5 @@ body .page-block .pbBody .pbSubheader .hideListButton {
 .button a img{vertical-align: -3px; margin-right:5px;}
 
 .float-right {float:right;display:inline;}
+
+.addNewButtons {float:left}
