--- a/public/themes/default/stylesheets/button.ie6.css
+++ b/public/themes/default/stylesheets/button.ie6.css
@@ -116,3 +116,4 @@ body .page-block .pbBody .pbSubheader .hideListButton {
 .button a img{vertical-align: -3px; margin-right:5px;}
 
 .float-right {float:right;}
+.addNewButtons {float:left}
