--- a/app/views/skm/channels/new_groups.html.erb
+++ b/app/views/skm/channels/new_groups.html.erb
@@ -27,7 +27,7 @@
         </div>
         <%= datatable("avaGroupsList",{:controller => "skm/channels", :action=>"get_ava_groups_data",:id=>@channel.id,:format=>:json},
                   [{:key=>"id",:label=>t(:operation),:hidden=>true,:width=>"60px"},
-                   {:key=>"code",:label=>t(:label_skm_channel_code), :width=>"100px"},
+                   {:key=>"code",:label=>t(:label_irm_group_group_code), :width=>"100px"},
                    {:key=>"name",:label=>t(:label_irm_group_name), :width => "150px"},
                    {:key=>"description",:label=>t(:label_irm_group_description)},
                    {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "40px"}],
