--- a/public/themes/default/stylesheets/container.css
+++ b/public/themes/default/stylesheets/container.css
@@ -46,6 +46,8 @@ body .page-title .pt-body {
 }
 .page-title .pt-body .page-type, .page-title .pt-body .page-description {margin-left: 37px;}
 
+.page-title.noicon .pt-body .page-type, .page-title.noicon .pt-body .page-description {margin-left: 0;}
+
 
 .page-title .pt-body .greeting .page-type {
     font-size: 109%;
@@ -70,6 +72,25 @@ div.greeting a {text-decoration:none;}
     display: block;
     overflow-x: hidden;
     overflow-y: hidden;
+}
+
+body .page-title .pt-body h1.noSecondHeader {
+  color:#000000;
+  font-size:2em;
+  font-weight:normal;
+  margin-bottom:0;
+  margin-top:0;
+  padding-right: 15px;
+}
+
+body .page-title .content .blank {
+  height:0;
+  clear:both;
+  font-size:0;
+}
+
+body .page-title .pt-body .content {
+  width:auto;
 }
 /*********************************************************************************************/
 /*首页布局容器*/
